package backend.object;

public class Bomb extends ImageObject{

    public Bomb(int posX, int posY, String path) {
        super(posX, posY, path);
    }

    
}
