package backend.world.Movement;

public interface MovePatternStrategy {
    public void patternMove();
}
