package backend.world;

import backend.object.Clown;

public interface NumberOfCLownsStrategy {
    public void setXCoord(Clown clown,int mX);
    public void setYCoord(Clown clown,int my);

}
